# de-zoomcamp-2026

./: .bruin.yml  .gitignore  AGENTS.md  README.md
.devcontainer/: devcontainer.json
01-docker-terraform/docker-workshop/: Dockerfile  notes.txt  pipeline.py
01-docker-terraform/homework-1/: README.md  homework.ipynb  ingest_data.py  main.tf  pyproject.toml
01-docker-terraform/terraform-demo/: .gitignore  main.tf
02-workflow-orchestration/: docker-compose.yaml
02-workflow-orchestration/flows/: 05_backfill_2021.yaml  06_gcp_kv.yaml
02-workflow-orchestration/homework-2/: 12_backfill_2021.yaml  13_backfill_2021_scheduled.yaml  README.md
02-workflow-orchestration/scripts/: verify_counts_2021.py
03-data-warehouse/: README.md  pyproject.toml
03-data-warehouse/homework-3/: README.md  load_yellow_taxi_data.py
04-analytics-engineering/dbt_project/: dbt_project.yml
04-analytics-engineering/dbt_project_backup/: README.md
04-analytics-engineering/homework-4/: README.md  load_taxi_data.py  upload_fhv.py
05-data-platforms/homework-5/: README.md
05-data-platforms/my-first-pipeline/: pipeline.yml
05-data-platforms/pipeline/: pipeline.yml
05-data-platforms/template/: .bruin.yml
06-batch/: README.md  pyproject.toml
06-batch/homework-6/: README.md
06-batch/notebooks/: homework-6.ipynb
07-streaming/homework-7/: README.md  docker-compose.yml  main.py  models.py  producer.py  pyproject.toml
docker-workshop/: ingest_data.py  pyproject.toml
homework-1/: Dockerfile  README.md  ingest_data.py  notebook.ipynb  notes.txt  pipeline.py  pyproject.toml
(+31 files in other folders)
